--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,5 +10,8 @@
     		<option th:each="importancia, row:${importancias}" th:value="${importancia.cImportancia}" th:text="${importancia.sImportancia}"></option>
 		</select>
 	</form>
+	<form th:action="@{/verContribuyentes}">
+    	<input type="submit" value="Ver contribuyentes">
+	</form>
 </body>
 </html>
