--- a/src/main/resources/templates/listaContribuyentes.html
+++ b/src/main/resources/templates/listaContribuyentes.html
@@ -16,8 +16,8 @@
 		
 		<th:block th:each="contribuyente, row:${contribuyentes}" >
 			<tr>
-				<th th:text="${contribuyente.cContribuyente}"/>
 				<th th:text="${contribuyente.nombre}"/>
+				<th th:text="${contribuyente.apellido}"/>
 				<th th:text="${contribuyente.nit}"/>
 				<th th:text="${contribuyente.fechaIngreso}"/>
 				<th th:text="${contribuyente.importancia.sImportancia}"/>
