--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -11,7 +11,7 @@
 		</select>
 		<br><br>
 		
-		<p><span th:text="${fecha_ingreso}" th:field="*{fechaIngreso}"></span></p>
+		<p><span th:field="*{fechaIngreso}" th:text="${fecha_ingreso}" ></span></p>
 		
 		<label>Nombre: </label>
 		<input th:field="*{nombre}" type="text">
