--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 	<form th:action="@{/agregarContribuyente}" th:object="${contribuyente}" method="post">
-		<select th:field="*{importancia}">
-    		<option th:each="importancia, row:${importancias}" th:value="${importancia.cImportancia}" th:text="${importancia.sImportancia}"></option>
+		<select th:field="*{importancia.cImportancia}">
+    		<option th:each="importancia, row:${importancias}" 
+    		th:value="${importancia.cImportancia}" 
+    		th:text="${importancia.sImportancia}"></option>
 		</select>
 		<br><br>
 		
