--- a/src/main/resources/templates/listaContribuyentes.html
+++ b/src/main/resources/templates/listaContribuyentes.html
@@ -19,7 +19,7 @@
 				<th th:text="${contribuyente.nombre}"/>
 				<th th:text="${contribuyente.apellido}"/>
 				<th th:text="${contribuyente.nit}"/>
-				<th th:text="${contribuyente.fechaIngreso}"/>
+				<th th:text="${contribuyente.fechaDelegate}"/>
 				<th th:text="${contribuyente.importancia.sImportancia}"/>
 			</tr>
 		</th:block>
